@@ -1,32 +1,16 @@
-/*
- * Copyright (c) 2020-2030, Shuigedeng (981376577@qq.com & https://blog.taotaocloud.top/).
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      https://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 package com.taotao.cloud.message.biz.austin.handler.deduplication.limit;
 
-import org.dromara.hutoolcore.collection.CollUtil;
-import com.taotao.cloud.message.biz.austin.support.utils.RedisUtils;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
+import cn.hutool.core.collection.CollUtil;
+import com.java3y.austin.common.constant.CommonConstant;
+import com.java3y.austin.common.domain.TaskInfo;
+import com.java3y.austin.handler.deduplication.DeduplicationParam;
+import com.java3y.austin.handler.deduplication.service.AbstractDeduplicationService;
+import com.java3y.austin.support.utils.RedisUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 采用普通的计数去重方法，限制的是每天发送的条数。
@@ -46,12 +30,9 @@ public class SimpleLimitService extends AbstractLimitService {
     public Set<String> limitFilter(AbstractDeduplicationService service, TaskInfo taskInfo, DeduplicationParam param) {
         Set<String> filterReceiver = new HashSet<>(taskInfo.getReceiver().size());
         // 获取redis记录
-        Map<String, String> readyPutRedisReceiver =
-                new HashMap<>(taskInfo.getReceiver().size());
-        // redis数据隔离
-        List<String> keys = deduplicationAllKey(service, taskInfo).stream()
-                .map(key -> LIMIT_TAG + key)
-                .toList();
+        Map<String, String> readyPutRedisReceiver = new HashMap<>(taskInfo.getReceiver().size());
+        //redis数据隔离
+        List<String> keys = deduplicationAllKey(service, taskInfo).stream().map(key -> LIMIT_TAG + key).collect(Collectors.toList());
         Map<String, String> inRedisValue = redisUtils.mGet(keys);
 
         for (String receiver : taskInfo.getReceiver()) {
@@ -72,13 +53,14 @@ public class SimpleLimitService extends AbstractLimitService {
         return filterReceiver;
     }
 
+
     /**
      * 存入redis 实现去重
      *
      * @param readyPutRedisReceiver
      */
-    private void putInRedis(
-            Map<String, String> readyPutRedisReceiver, Map<String, String> inRedisValue, Long deduplicationTime) {
+    private void putInRedis(Map<String, String> readyPutRedisReceiver,
+                            Map<String, String> inRedisValue, Long deduplicationTime) {
         Map<String, String> keyValues = new HashMap<>(readyPutRedisReceiver.size());
         for (Map.Entry<String, String> entry : readyPutRedisReceiver.entrySet()) {
             String key = entry.getValue();
@@ -92,4 +74,5 @@ public class SimpleLimitService extends AbstractLimitService {
             redisUtils.pipelineSetEx(keyValues, deduplicationTime);
         }
     }
+
 }
